# debox

./: .gitignore  Makefile  README.md  build_deb.sh  pyproject.toml
debian/: changelog
debox/: cli.py
debox/commands/: apply_cmd.py  configure_cmd.py  image_cmd.py  install_cmd.py  list_cmd.py  network_cmd.py  reinstall_cmd.py  remove_cmd.py  repair_cmd.py  run_cmd.py  safe_prune_cmd.py  system_cmd.py  upgrade_cmd.py
debox/core/: autocompletion.py  config.py  config_utils.py  container_ops.py  debox-open  debox-open.desktop  desktop_integration.py  global_config.py  gpg_utils.py  hash_utils.py  keep_alive.py  lifecycle.py  log_utils.py  podman_utils.py  registry_utils.py  state.py
docs/: debox.1.md  debox.yml.5.md
examples/: app-minimal.yml  base-electron.yml  base-minimal.yml  base-qt.yml  base-vscode.yml  base.yml  cheese.yml  chrome.yml  chromium.yml  firefox.yml  gimp.yml  kcalc.yml  libreoffice.yml  mc.yml  neovim.yml  neowofetch.yml  onlyoffice.yml  snapshot.yml  unrar.yml  vlc.yml  vscode-debox.yml  vscode-lisp.yml  vscode.yml  wpsoffice.yml
scripts/: build_deb.sh  bump_version.sh  debox.sh  push_repo.sh  release_github.sh
tests/: test-image.yml  test_advanced_config.sh  test_config_changes.sh  test_registry_edge_cases.sh  test_registry_lifecycle.sh  test_tier1_rebuild.sh  test_tier2_recreation.sh  test_tier3_integration.sh
